force-app/main/default/objects/sf_Reference_Application_Language__c/sf_Reference_Application_Language__c.object-meta.xml
<CustomObject>
    <label>Reference Application Language</label>
    <nameField>
        <displayFormat>RAL-{000000}</displayFormat>
        <label>Reference Application Language Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Application Languages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>