force-app/main/default/objects/sf_Reference_Application_Language__c/fields/sf_Reference_Application__c.field-meta.xml
<CustomField>
    <fullName>sf_Reference_Application__c</fullName>
    <label>Reference Application</label>
    <referenceTo>sf_Reference_Application__c</referenceTo>
    <relationshipLabel>Reference Application Languages</relationshipLabel>
    <relationshipName>sf_Reference_Application_Languages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>