force-app/main/default/objects/sf_Reference_Application_Language__c/fields/Translated_Display_Description__c.field-meta.xml
<CustomField>
    <fullName>Translated_Display_Description__c</fullName>
    <label>Translated Display Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>