force-app/main/default/objects/sf_Reference_Application_Language__c/fields/Translated_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Translated_Display_Name__c</fullName>
    <label>Translated Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>