force-app/main/default/objects/sf_Reference_Application_Language__c/fields/Translated_Status__c.field-meta.xml
<CustomField>
    <fullName>Translated_Status__c</fullName>
    <inlineHelpText>Represents &apos;Status&apos; in the translated language.</inlineHelpText>
    <label>Translated Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>