force-app/main/default/objects/sf_Reference_Application_Language__c/fields/Translated_Submit_Text__c.field-meta.xml
<CustomField>
    <fullName>Translated_Submit_Text__c</fullName>
    <label>Translated Submit Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>